Implemented Inventory & Purchase Management module